syntax = "proto3";

package main;

option go_package = "./proto";


// 菜单信息
message Menu {
  int64 id = 1;                 // 菜单ID
  int64 parent_id = 2;          // 父菜单ID
  string menu_name = 3;         // 菜单名称
  string menu_type = 4;         // 菜单类型 (M-目录, C-菜单, F-按钮)
  string path = 5;              // 路由路径
  string component = 6;         // 组件路径
  string redirect = 7;          // 重定向路径
  string icon = 8;              // 菜单图标
  int32 sort = 9;               // 排序
  bool no_cache = 10;           // 是否缓存
  bool affix = 11;              // 是否固定在标签栏
  bool external = 12;           // 是否外部链接
  bool hidden = 13;             // 是否隐藏
  int32 status = 14;            // 状态 (0-禁用, 1-正常)
  int64 scope_id = 15;          // 权限范围ID
  string remark = 16;           // 备注
  repeated Menu children = 17;
  repeated string perms = 18;
}


// ========== 菜单管理 ==========

// 菜单列表请求
message MenuListRequest {
  bool with_button = 1;   // 是否包含按钮
  int32 status = 2;       // 状态过滤
}

// 菜单列表响应 (树形结构)
message MenuTreeResponse {
  repeated Menu menus = 1;
}

// 创建菜单请求
message CreateMenuRequest {
  Menu menu = 1;
  int64 operator_id = 2;
}

// 更新菜单请求
message UpdateMenuRequest {
  Menu menu = 1;
  int64 operator_id = 2;
}

// 删除菜单请求
message DeleteMenuRequest {
  int64 id = 1;           // 菜单ID
  int64 operator_id = 2;
}

// ========== 安全范围管理 ==========


message Scope {
  int64 id = 1;           // 范围ID
  string scope_name = 2;  // 范围名称
  string scope_code = 3;  // 范围编码
  string description = 4; // 范围描述
  int32 sort = 5;         // 排序
}


message ScopeInfo {
  Scope scope = 1;
  repeated Menu menus = 2; // 菜单
}


// 安全范围列表请求
message ScopeListRequest {
  PageRequest page_request = 1;
}

// 安全范围列表响应
message ScopeListResponse {
  PageResponse page_response = 1;
  repeated Scope scopes = 2;
}

// 创建安全范围请求
message CreateScopeRequest {
  string scope_name = 1;  // 范围名称
  string scope_code = 2;  // 范围编码
  string description = 3; // 范围描述
  int32 sort = 4;         // 排序
  repeated int64 menu_ids = 5; // 菜单ID
  int64 operator_id = 6;  // 操作者
}

// 更新安全范围请求
message UpdateScopeRequest {
  int64 id = 1;           // 范围ID
  string scope_name = 2;  // 范围名称
  string scope_code = 3;  // 范围编码
  string description = 4; // 范围描述
  int32 sort = 5;         // 排序
  int64 operator_id = 6;  // 操作者
}

// 删除安全范围请求
message DeleteScopeRequest {
  int64 id = 1;           // 范围ID
  int64 operator_id = 2;  // 操作者
}

// 添加安全范围菜单请求
message AddScopeMenusRequest {
  int64 scope_id = 1;
  repeated int64 menu_ids = 2;
  int64 operator_id = 3;
}

// 删除安全范围菜单请求
message DeleteScopeMenusRequest {
  int64 scope_id = 1;
  repeated int64 menu_ids = 2;
  int64 operator_id = 3;
  bool delete_all = 4;
}


service ScopeService {
  // 安全范围管理
  rpc GetScopeList(ScopeListRequest) returns (ScopeListResponse);
  rpc GetScopeById(Int64Value) returns (Scope);
  rpc CreateScope(CreateScopeRequest) returns (Scope);
  rpc UpdateScope(UpdateScopeRequest) returns (Scope);
  rpc DeleteScope(DeleteScopeRequest) returns (Empty);
  rpc AddScopeMenus(AddScopeMenusRequest) returns (ScopeInfo);
  rpc DeleteScopeMenus(DeleteScopeMenusRequest) returns (ScopeInfo);
  rpc GetScopeMenus(Int64Value) returns (ScopeInfo);
  // 菜单管理
  rpc GetMenuTree(MenuListRequest) returns (MenuTreeResponse);
  rpc GetMenuById(Int64Value) returns (Menu);
  rpc CreateMenu(CreateMenuRequest) returns (Menu);
  rpc UpdateMenu(UpdateMenuRequest) returns (Menu);
  rpc DeleteMenu(DeleteMenuRequest) returns (Empty);
}


